--- a/eos-voter/package.json
+++ b/eos-voter/package.json
@@ -11,6 +11,9 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "mithril": "^1.1.6",
+    "morgan": "~1.9.0",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.3"
   }
 }
