--- a/eos-voter/package.json
+++ b/eos-voter/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "mithril": "^1.1.6",
     "morgan": "~1.9.0",
+    "nodemon": "^1.17.4",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.3"
   }
