--- a/eos-voter/package.json
+++ b/eos-voter/package.json
@@ -14,6 +14,7 @@
     "mithril": "^1.1.6",
     "morgan": "~1.9.0",
     "nodemon": "^1.17.4",
+    "sprintf": "^0.1.5",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.3"
   }
