--- a/eos-voter/package.json
+++ b/eos-voter/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "NODE_ENV=production nodejs ./bin/www",
     "startdev": "NODE_ENV=development nodemon ./bin/www"
   },
   "dependencies": {
