Update deployment procedure for Ken to test deployment

--- a/config/nginx/eos-voter.conf
+++ b/config/nginx/eos-voter.conf
@@ -2,9 +2,32 @@ server {
     listen 80;  # ipv4
     listen [::]:80;  # ipv6
     server_name "eos-voter.example.com";
+    gzip on;
+    gzip_types text/html text/css application/javascript;
 
     location / {
-        return 301 https://eos-voter.example.com$request_uri;
+        proxy_pass http://localhost:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+     }
+
+    location /images/ {
+      alias /srv/eos-voter/eos-voter/public/images/;
+    }
+
+    location /bin/ {
+      alias /srv/eos-voter/eos-voter/public/bin/;
+    }
+
+    location /js/ {
+      alias /srv/eos-voter/eos-voter/public/js/;
+    }
+
+    location /stylesheets/ {
+      alias /srv/eos-voter/eos-voter/public/stylesheets/;
     }
 
     location /.well-known/ {
@@ -46,7 +69,7 @@ server {
       alias /srv/eos-voter/eos-voter/public/js/;
     }
 
-    location /stylesheets/ {   
+    location /stylesheets/ {
       alias /srv/eos-voter/eos-voter/public/stylesheets/;
     }
 
@@ -54,3 +77,4 @@ server {
         alias /srv/eos-voter/public/.well-known/;
     }
 }
+
