--- a/eos-voter/package.json
+++ b/eos-voter/package.json
@@ -12,6 +12,7 @@
     "eosjs": "^13.0.1",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "humanize-plus": "^1.8.2",
     "jade": "~1.11.0",
     "mithril": "^1.1.6",
     "morgan": "~1.9.0",
