--- a/config/nginx/eos-voter.conf
+++ b/config/nginx/eos-voter.conf
@@ -48,6 +48,10 @@ server {
     ssl_certificate /etc/letsencrypt/live/eos-voter.example.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/eos-voter.example.com/privkey.pem;
 
+    #location / {
+    #    return 301 http://eos-voter.example.com$request_uri;
+    #}
+
     location / {
         proxy_pass http://localhost:3000;
         proxy_http_version 1.1;
