Change web server side caching defaults

--- a/config/nginx/eos-voter.conf
+++ b/config/nginx/eos-voter.conf
@@ -16,22 +16,52 @@ server {
 
     location /images/ {
       alias /srv/eos-voter/eos-voter/public/images/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
     location /bin/ {
       alias /srv/eos-voter/eos-voter/public/bin/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
     location /js/ {
       alias /srv/eos-voter/eos-voter/public/js/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
     location /stylesheets/ {
       alias /srv/eos-voter/eos-voter/public/stylesheets/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
     location /.well-known/ {
         alias /srv/eos-voter/public/.well-known/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
 }
@@ -63,22 +93,52 @@ server {
 
     location /images/ {
       alias /srv/eos-voter/eos-voter/public/images/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
     location /bin/ {
       alias /srv/eos-voter/eos-voter/public/bin/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
     location /js/ {
       alias /srv/eos-voter/eos-voter/public/js/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
     location /stylesheets/ {
       alias /srv/eos-voter/eos-voter/public/stylesheets/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 
     location /.well-known/ {
         alias /srv/eos-voter/public/.well-known/;
+      # kill cache
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      if_modified_since off;
+      expires off;
+      etag off;
     }
 }
 
