Change default config to redirect all http to https

--- a/config/nginx/eos-voter.conf
+++ b/config/nginx/eos-voter.conf
@@ -6,62 +6,7 @@ server {
     gzip_types text/html text/css application/javascript;
 
     location / {
-        proxy_pass http://localhost:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-     }
-
-    location /images/ {
-      alias /srv/eos-voter/eos-voter/public/images/;
-      # kill cache
-      add_header Last-Modified $date_gmt;
-      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-      if_modified_since off;
-      expires off;
-      etag off;
-    }
-
-    location /bin/ {
-      alias /srv/eos-voter/eos-voter/public/bin/;
-      # kill cache
-      add_header Last-Modified $date_gmt;
-      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-      if_modified_since off;
-      expires off;
-      etag off;
-    }
-
-    location /js/ {
-      alias /srv/eos-voter/eos-voter/public/js/;
-      # kill cache
-      add_header Last-Modified $date_gmt;
-      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-      if_modified_since off;
-      expires off;
-      etag off;
-    }
-
-    location /stylesheets/ {
-      alias /srv/eos-voter/eos-voter/public/stylesheets/;
-      # kill cache
-      add_header Last-Modified $date_gmt;
-      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-      if_modified_since off;
-      expires off;
-      etag off;
-    }
-
-    location /.well-known/ {
-        alias /srv/eos-voter/public/.well-known/;
-      # kill cache
-      add_header Last-Modified $date_gmt;
-      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-      if_modified_since off;
-      expires off;
-      etag off;
+        return 301 http://eos-voter.example.com$request_uri;
     }
 
 }
