--- a/eos-voter/package.json
+++ b/eos-voter/package.json
@@ -15,6 +15,7 @@
     "humanize-plus": "^1.8.2",
     "jade": "~1.11.0",
     "mithril": "^1.1.6",
+    "mongodb": "^3.1.4",
     "morgan": "~1.9.0",
     "nodemon": "^1.17.5",
     "request": "^2.87.0",
