Fix various depoloyment glitches

--- a/config/nginx/test-eos-voter.conf
+++ b/config/nginx/test-eos-voter.conf
@@ -1,8 +1,8 @@
 
 server {
 
-    listen 80 ssl;  # ipv4
-    listen [::]:80 ssl;  # ipv6
+    listen 80;  # ipv4
+    listen [::]:80;  # ipv6
     gzip on;
     gzip_types text/html text/css application/javascript;
 
