Fix error with redirects in the nginx config file

--- a/config/nginx/eos-voter.conf
+++ b/config/nginx/eos-voter.conf
@@ -6,7 +6,7 @@ server {
     gzip_types text/html text/css application/javascript;
 
     location / {
-        return 301 http://eosvoter.eosphere.io$request_uri;
+        return 301 https://eosvoter.eosphere.io$request_uri;
     }
 
 }
