--- a/eos-voter/package.json
+++ b/eos-voter/package.json
@@ -22,6 +22,9 @@
     "request-promise": "^4.2.2",
     "sprintf": "^0.1.5",
     "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "^2.1.4",
+    "scatterjs-core": "^2.3.7",
+    "scatterjs-plugin-eosjs": "^1.3.7",
+    "babel-cli": "6.26.0"
   }
 }
