--- a/eos-voter/package.json
+++ b/eos-voter/package.json
@@ -25,6 +25,9 @@
     "webpack-cli": "^2.1.4",
     "scatterjs-core": "^2.3.7",
     "scatterjs-plugin-eosjs": "^1.3.7",
-    "babel-cli": "6.26.0"
+    "@babel/runtime": "^7.1.2"
+  },
+  "devDependencies": {
+    "@babel/runtime": "^7.1.2"
   }
 }
