Update various configs for the telos voter

--- a/config/nginx/telos-voter.conf
+++ b/config/nginx/telos-voter.conf
@@ -1,12 +1,12 @@
 server {
-    listen 80;  # ipv4
-    listen [::]:80;  # ipv6
-    server_name "eosvoter.eosphere.io";
+    listen 90;  # ipv4
+    listen [::]:90;  # ipv6
+    server_name "telosvoter.eosphere.io";
     gzip on;
     gzip_types text/html text/css application/javascript;
 
     location / {
-        return 301 https://eosvoter.eosphere.io$request_uri;
+        return 301 https://telosvoter.eosphere.io$request_uri;
     }
 
 }
@@ -14,9 +14,9 @@ server {
 
 server {
 
-    listen 443 ssl;  # ipv4
-    listen [::]:443 ssl;  # ipv6
-    server_name "eosvoter.eosphere.io";
+    listen 453 ssl;  # ipv4
+    listen [::]:453 ssl;  # ipv6
+    server_name "telosvoter.eosphere.io";
 
     gzip on;
     gzip_types text/html text/css application/javascript;
@@ -31,7 +31,7 @@ server {
     ssl_dhparam /etc/nginx/ssl/dhparams.pem;
 
     location / {
-        proxy_pass http://localhost:3000;
+        proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -40,7 +40,7 @@ server {
      }
 
     location /images/ {
-      alias /srv/eos-voter/eos-voter/public/images/;
+      alias /srv/telos-voter/eos-voter/public/images/;
       # kill cache
       add_header Last-Modified $date_gmt;
       add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
@@ -50,7 +50,7 @@ server {
     }
 
     location /bin/ {
-      alias /srv/eos-voter/eos-voter/public/bin/;
+      alias /srv/telos-voter/eos-voter/public/bin/;
       # kill cache
       add_header Last-Modified $date_gmt;
       add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
@@ -60,7 +60,7 @@ server {
     }
 
     location /js/ {
-      alias /srv/eos-voter/eos-voter/public/js/;
+      alias /srv/telos-voter/eos-voter/public/js/;
       # kill cache
       add_header Last-Modified $date_gmt;
       add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
@@ -70,7 +70,7 @@ server {
     }
 
     location /stylesheets/ {
-      alias /srv/eos-voter/eos-voter/public/stylesheets/;
+      alias /srv/telos-voter/eos-voter/public/stylesheets/;
       # kill cache
       add_header Last-Modified $date_gmt;
       add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
