--- a/config/supervisord/telos-chaininspector.conf
+++ b/config/supervisord/telos-chaininspector.conf
@@ -1,4 +1,4 @@
-[program:chaininspector]
+[program:telos-chaininspector]
 command=/srv/telos-voter/chaininspector/venv/bin/python /srv/telos-voter/chaininspector/chaininspector.py localhost
 autostart=true
 autorestart=true
