--- a/config/nginx/telos-voter.conf
+++ b/config/nginx/telos-voter.conf
@@ -1,6 +1,6 @@
 server {
-    listen 90;  # ipv4
-    listen [::]:90;  # ipv6
+    listen 8888;  # ipv4
+    listen [::]:8888;  # ipv6
     server_name "telosvoter.eosphere.io";
     gzip on;
     gzip_types text/html text/css application/javascript;
@@ -14,15 +14,15 @@ server {
 
 server {
 
-    listen 453 ssl;  # ipv4
-    listen [::]:453 ssl;  # ipv6
+    listen 1443 ssl;  # ipv4
+    listen [::]:1443 ssl;  # ipv6
     server_name "telosvoter.eosphere.io";
 
     gzip on;
     gzip_types text/html text/css application/javascript;
     ssl on;
-    ssl_certificate     /etc/nginx/ssl/eosphere.io.chained.crt;
-    ssl_certificate_key /etc/nginx/ssl/eosphere.io.key;
+    ssl_certificate     /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
     ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
 
